--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = moodle-toml
-version = 1.0.0a2
+version = 1.0.0a3
 author = James Finnie-Ansley
 url = https://github.com/James-Ansley/moodle-toml
 description = A small transpiler that converts human-readable text and TOML file formats representing Moodle questions to Moodle XML
@@ -25,6 +25,7 @@ install_requires =
     tomli~=2.0.1
     Markdown~=3.3.7
     Jinja2~=3.1.2
+    beautifulsoup4~=4.11.1
 
 [options.package_data]
 * =
