changed project name to Toodle

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = moodle-toml
+name = toodle
 version = 1.0.0a6
 author = James Finnie-Ansley
 url = https://github.com/James-Ansley/moodle-toml
