added simple cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,7 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    toodle = toodle:__main__
