--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = toodle
 version = 1.0.0a6
 author = James Finnie-Ansley
-url = https://github.com/James-Ansley/moodle-toml
+url = https://github.com/James-Ansley/toodle
 description = A small transpiler that converts human-readable text and TOML file formats representing Moodle questions to Moodle XML
 long_description_content_type = text/markdown
 long_description = file: README.md
@@ -21,11 +21,7 @@ python_requires = >= 3.10
 package_dir =
     = src
 packages = find:
-install_requires =
-    tomli~=2.0.1
-    Markdown~=3.3.7
-    Jinja2~=3.1.2
-    beautifulsoup4~=4.11.1
+install_requires = file: requirements.txt
 
 [options.package_data]
 * =
