--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-tomli~=2.0.1
-Markdown~=3.3.7
 Jinja2~=3.1.2
+jsonschema~=4.17.3
 beautifulsoup4~=4.11.1
-typer~=0.6.1
-jsonschema~=4.16.0
+markdown-it-py[linkify]~=2.1.0
+typer[all]~=0.7.0
